--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.79.4",
     "twilio": "^5.3.3",
     "web-vitals": "^2.1.4"
